# strategic-popoltastic-plugin

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  hooks.json  package-lock.json  package.json  pyproject.toml
.claude-plugin/: plugin.json
companies/strategicpopoltastic/: .brand-sync-version.json  charter.json  people.json  profile.json
companies/strategicpopoltastic/.build-history/: brand-book.html  imagery-guide.html  revision-comparison.html  visual-identity.html
companies/strategicpopoltastic/brand/: charter.json  guidelines.md  tokens.css
companies/strategicpopoltastic/messaging/: audiences.json  narratives.json  pillars.json  proof-points.json
companies/strategicpopoltastic/proposals/: boilerplate.json  case-studies.json  differentiators.json  methodologies.json  partnerships.json  team-bios.json  testimonials.json
skills/docx/: SKILL.md
skills/docx/scripts/: comment.py
skills/messaging-framework/: SKILL.md
skills/messaging-framework/references/: audience-adaptation.md  company-data-schema.md  discovery-workflow.md  framework-types.md  proof-taxonomy.md  quality-criteria.md
skills/pdf/: SKILL.md
skills/pdf/scripts/: create_validation_image.py  fill_pdf_form_with_annotations.py
skills/pptx/: SKILL.md  ooxml.md
skills/pptx/assets/: _base.css
skills/pptx/references/: design-guide.md  template-workflow.md
skills/pptx/scripts/: brand.js  build-branded.js  inventory.py
skills/press-release/: SKILL.md
skills/proposal/: SKILL.md
skills/remotion-video/: SKILL.md
skills/xlsx/: SKILL.md  recalc.py
src/: workspace.js  workspace.py
(+46 files in other folders)
